Closed Bug 239873 Opened 20 years ago Closed 20 years ago

DOMStringList interface not matching DOM Level 3

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: glazou, Unassigned)

Details

Attachments

(1 file)

DOM Level 3 Proposed Rec (url below) has a |contains()| method on DOMStringList
that we don't implement for the time being.

http://www.w3.org/TR/2004/PR-DOM-Level-3-Core-20040205/core.html#DOMStringList

Furthermore, please read the following msg, sent to www-dom@w3.org:

http://lists.w3.org/Archives/Public/www-dom/2004AprJun/0003.html
Attached patch v1Splinter Review
Attachment #162415 - Flags: superreview?(jst)
Attachment #162415 - Flags: review?(jst)
Comment on attachment 162415 [details] [diff] [review]
v1

r+sr=jst
Attachment #162415 - Flags: superreview?(jst)
Attachment #162415 - Flags: superreview+
Attachment #162415 - Flags: review?(jst)
Attachment #162415 - Flags: review+
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: