Fix for bug 239873 (DOMStringList interface not matching DOM Level 3). r/sr=jst.